Use Plaintext instead of html in TextScrollingWidget.

This fixes issue with some strings getting shown inccorectly in the current track applet becuase of special characters ( like < and > ) being present.
ChangeLog++

BUG: 222765